0.97a	FIXED - Incorrect action URL in 'map selector' combo box for Cacti users.

0.97	FIXED - RRD Aggregation regexp was failing (thanks to shd)
	FIXED - Scale numerals honour locale (thanks again, shd)
	FIXED - THold plugin check failed with Thold 0.4.1 (PA 2.x, actually)
	FIXED - Uninitialized variable in ReadData when plugin is disabled
	FIXED - Zero-length link check didn't include offsets (thanks Ryan Botoluzzi)
	FIXED - Cacti-pick should get right rra path for packagers that move the rra directory (e.g. Ubuntu, Debian *again*)
	FIXED - DS plugins that return one value and a null should work properly
	FIXED - "Strange" characters (e.g. /) in NODE and LINK names broke the imagemap.
	FIXED - Map Style settings in editor were broken after internal defaults changes
	FIXED - Imagemap no longer contains areas with no href defined
	FIXED - SPLITPOS was ignored with VIASTYLE angled (thanks to uhtred)
	FIXED - 'AICONOUTLINECOLOR none' is actually valid now (thanks to mgb & Leathon)
        FIXED - readdir() loop never stops, on some systems (thanks to jerebernard)
        FIXED - bad regexp in the MRTG DS plugin (thanks to Matt McMahon)
        FIXED - 0.96 had a new 'time' DS plugin - now documented!
        FIXED - NCFPC only complains about missing scale lines on NODEs for the variable that is in use.
        ADDED - USEICONSCALE no longer has special dependencies - and the colours are nicer too.
	ADDED - Option of a dropdown selector to navigate between maps (in full-size view)
	ADDED - Maps can be organised into groups in Cacti plugin. These appear
			as tabs in the UI for viewing maps.
	ADDED - Extra variables can be defined per-group, so all maps in a group can have similar settings (e.g. a "24hr average" tab).
	ADDED - INCLUDE keyword to include a file of common definitions (based on work by BorisL)
			(NOTE: this can confuse the editor sometimes - see the manual page for INCLUDE)
	ADDED - Warning for maps that contain OVERLIBGRAPH but not 'HTMLSTYLE overlib'